samples/_failures_safe/1761305519_fe3836_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59bab328.c: In function ‘main’:
./samples/SAFE/__tmp_59bab328.c:133:5: error: expected expression at end of input
  133 |     add_log_entry(&analyzer, "2024-01-15 10:31:15", "WARN",
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_59bab328.c:133:5: error: expected declaration or statement at end of input
